ensure shifts are at least 1 hour; improve alert fade-out

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,11 +24,6 @@
   }
 }
 
-.alert {
-  opacity: 1;
-  transition: opacity 3s; 
-}
-
 .alert.fade {
   opacity: 0;
 }
